[package]
name = "mixxx_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_rusqlite = "0.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
id3 = "1.8.0"
clap = { version = "4.4.6", features = ["derive"] }
anyhow = { version = "1", features = ["std"] }
chrono = { version = "0.4.31", features = ["serde"] }
comfy-table = "7.0.1"
regex = "1"
log = "0.4.20"
simplelog = "0.12.1"
kdam = "0.5.0"
